--- a/project/main.conf
+++ b/project/main.conf
@@ -8,3 +8,13 @@ server
         index index.html;
     }
 }
+server
+{
+    name webserv2;
+    port 4040;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
