--- a/project/main.conf
+++ b/project/main.conf
@@ -8,10 +8,55 @@ server
         index index.html;
     }
 }
+
 server
 {
     name webserv2;
-    port 4040;
+    port 43524;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
+
+server
+{
+    name webserv2;
+    port 4242;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
+
+server
+{
+    name webserv2;
+    port 1337;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
+
+server
+{
+    name webserv2;
+    port 8888;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
+
+server
+{
+    name webserv2;
+    port 12345;
     location / {
         method GET;
         root ./www/;
