loop && parser repaired

--- a/project/main.conf
+++ b/project/main.conf
@@ -9,3 +9,15 @@ server
         index index.html;
     }
 }
+
+server
+{
+    name webserv;
+    ip 127.0.0.1
+    port 2121;
+    location / {
+        method GET;
+        root ./www/;
+        index index.html;
+    }
+}
