Begin test && implementation GET/POST/DELETE

--- a/project/main.conf
+++ b/project/main.conf
@@ -8,16 +8,12 @@ server
         root ./www/;
         index index.html;
     }
-}
-
-server
-{
-    name webserv;
-    ip 127.0.0.1
-    port 2121;
-    location / {
-        method GET;
-        root ./www/;
-        index index.html;
+    location /img {
+         method GET;
+         root ./www/img/;
+    }
+    location /uploads {
+        method POST;
+        root ./www/uploads/;
     }
 }
