--- a/project/main.conf
+++ b/project/main.conf
@@ -8,9 +8,25 @@ server
         root ./www/;
         index index.html;
     }
-    location /img {
+    location /methods {
          method GET;
-         root ./www/img/;
+         root ./www/methods/;
+    }
+    location /images {
+             method GET;
+             root ./www/src/img/;
+        }
+    location /src {
+         method GET;
+         root ./www/src/;
+    }
+    location /status {
+         method GET;
+         root ./www/status/;
+    }
+    location /public {
+         method GET;
+         root ./www/public/;
     }
     location /uploads {
         method POST;
