update POST methode

--- a/project/main.conf
+++ b/project/main.conf
@@ -20,16 +20,16 @@ server
          method GET;
          root ./www/src/;
     }
-    location /status {
+    location /error {
          method GET;
-         root ./www/status/;
+         root ./www/error/;
     }
     location /public {
          method GET;
          root ./www/public/;
     }
     location /uploads {
-        method POST;
+        method POST DELETE GET;
         root ./www/uploads/;
     }
 }
