feat: simple dir-listing + fix: error redirect and checkMethod

--- a/project/main.conf
+++ b/project/main.conf
@@ -4,12 +4,14 @@ server
     ip 127.0.0.1
     port 4242;
     location / {
-        method GET;
+        method GET POST;
+        autoindex true;
         root ./www/;
         index index.html;
     }
     location /methods {
          method GET;
+         autoindex true;
          root ./www/methods/;
     }
     location /images {
@@ -19,10 +21,6 @@ server
     location /src {
          method GET;
          root ./www/src/;
-    }
-    location /error {
-         method GET;
-         root ./www/error/;
     }
     location /public {
          method GET;
