--- a/project/main.conf
+++ b/project/main.conf
@@ -6,6 +6,8 @@ server
     location / {
         method GET;
         root ./www/;
+        cgi_extension php;
+        cgi_path ./www/CGI/php;
         index index.html;
     }
     location /methods {
