--- a/project/test.conf
+++ b/project/test.conf
@@ -7,7 +7,7 @@ server
         # index test.html default.html;
         # autoindex on;
         root /Users/tom/Documents/www/YoupiBanane;
-        cgi_extension bla;
+        cgi_extension pl;
         cgi_path /Users/tom/Downloads/cgi_tester;
         index test.html.youpi.bad_extension;
     }
