--- a/project/main.conf
+++ b/project/main.conf
@@ -27,6 +27,7 @@ server
          root ./www/public/;
     }
     location /uploads {
+        autoindex true;
         method POST DELETE GET;
         root ./www/uploads/;
     }
