--- a/project/main.conf
+++ b/project/main.conf
@@ -7,7 +7,7 @@ server
         method GET;
         root ./www/;
         cgi_extension php;
-        cgi_path ./www/CGI/php;
+        cgi_path ./www/cgi-bin/php;
         index index.html;
     }
     location /methods {
