--- a/project/main.conf
+++ b/project/main.conf
@@ -13,7 +13,7 @@ server
         cgi_path ./www/cgi-bin/php;
     }
     location /methods {
-         method GET;
+         method GET POST;
          autoindex true;
          root ./www/methods/;
     }
