--- a/project/main.conf
+++ b/project/main.conf
@@ -33,4 +33,10 @@ server
         method POST DELETE GET;
         root ./www/uploads/;
     }
+    location /php {
+        method GET POST DELETE;
+        root ./www/php/;
+        cgi_extension php;
+        cgi_path ./www/cgi-bin/php;
+    }
 }
