--- a/project/main.conf
+++ b/project/main.conf
@@ -9,7 +9,7 @@ server
         root ./www/;
         index index.html;
         cgi_extension php;
-        cgi_path ./www/cgi-bin/php;
+        cgi_path ./cgi-bin/php;
     }
     location /methods {
          method GET;
