fix: simplify the eval with script and conf

--- a/project/eval.conf
+++ b/project/eval.conf
@@ -2,6 +2,7 @@ server
 {
     name webserv;
     ip 127.0.0.1
+    client_max_body_size 4096;
     port 4242;
     location / {
         method GET POST;
@@ -43,10 +44,9 @@ server
     location / {
         method GET POST;
         autoindex true;
-        root ./www/;
+        root ./www-2/;
         index index.html;
         cgi_extension php;
-        cgi_path ./cgi-bin/php;
     }
     location /methods {
          method GET;
