--- a/project/main.conf
+++ b/project/main.conf
@@ -35,3 +35,41 @@ server
         root ./www/uploads/;
     }
 }
+
+server
+{
+    name webserv;
+    ip 127.0.0.1
+    port 8080;
+    client_max_body_size 4096;
+    location / {
+        method GET POST;
+        autoindex true;
+        root ./vvv/;
+        index index.html;
+        cgi_extension php;
+        cgi_path ./cgi-bin/php;
+    }
+    location /methods {
+         method GET POST;
+         autoindex true;
+         root ./vvv/methods/;
+    }
+    location /images {
+             method GET;
+             root ./vvv/src/img/;
+        }
+    location /src {
+         method GET;
+         root ./vvv/src/;
+    }
+    location /public {
+         method GET;
+         root ./vvv/public/;
+    }
+    location /uploads {
+        autoindex true;
+        method POST DELETE GET;
+        root ./vvv/uploads/;
+    }
+}
