--- a/project/main.conf
+++ b/project/main.conf
@@ -3,6 +3,7 @@ server
     name webserv;
     ip 127.0.0.1
     port 4242;
+    client_max_body_size 30000;
     location / {
         method GET POST;
         autoindex true;
